objects/dfsle__BulkList__c.object
<CustomObject>
    <description>DocuSign Bulk Send List</description>
    <fields>
        <fullName>dfsle__DocuSignId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>DocuSign bulk list ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dfsle__Recipients__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipients</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Bulk Send List</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Bulk Send Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>